--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@sveltejs/vite-plugin-svelte": "^6.0.0",
     "@tailwindcss/vite": "^4.0.0",
     "@types/lodash": "^4.17.20",
+    "@vite-pwa/assets-generator": "^1.0.0",
+    "@vite-pwa/sveltekit": "^1.0.0",
     "prettier": "^3.4.2",
     "prettier-plugin-svelte": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
@@ -26,7 +28,8 @@
     "svelte-check": "^4.0.0",
     "tailwindcss": "^4.0.0",
     "typescript": "^5.0.0",
-    "vite": "^7.0.4"
+    "vite": "^7.0.4",
+    "workbox-window": "^7.3.0"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
