--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "format": "prettier --write .",
-    "lint": "prettier --check ."
+    "lint": "prettier --check .",
+    "generate:pwa-assets": "npx @vite-pwa/assets-generator"
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^3.0.8",
